--- a/Source/HolyBird/DTO/DTO.csproj
+++ b/Source/HolyBird/DTO/DTO.csproj
@@ -42,10 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountDTO.cs" />
+    <Compile Include="DetailRoomReservedDTO.cs" />
+    <Compile Include="DetailTransactionDTO.cs" />
     <Compile Include="MemberDTO.cs" />
     <Compile Include="EmployeeDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomDTO.cs" />
+    <Compile Include="ActivityDTO.cs" />
     <Compile Include="TransactionDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
