--- a/Source/HolyBird/DTO/DTO.csproj
+++ b/Source/HolyBird/DTO/DTO.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountDTO.cs" />
+    <Compile Include="BillChildDTO.cs" />
     <Compile Include="DetailRoomReservedDTO.cs" />
     <Compile Include="DetailTransactionDTO.cs" />
+    <Compile Include="DamagesDTO.cs" />
     <Compile Include="MemberDTO.cs" />
     <Compile Include="EmployeeDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
