--- a/Source/HolyBird/BUS/BUS.csproj
+++ b/Source/HolyBird/BUS/BUS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="EmployeeBUS.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
