--- a/Source/HolyBird/BUS/BUS.csproj
+++ b/Source/HolyBird/BUS/BUS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBUS.cs" />
+    <Compile Include="DetailRoomReservedBUS.cs" />
     <Compile Include="EmployeeBUS.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
