--- a/Source/HolyBird/DAO/DAO.csproj
+++ b/Source/HolyBird/DAO/DAO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AccountDAO.cs" />
     <Compile Include="DataProvider.cs" />
+    <Compile Include="DetailRoomReservedDAO.cs" />
     <Compile Include="EmployeeDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomDAO.cs" />
