--- a/Source/HolyBird/BUS/BUS.csproj
+++ b/Source/HolyBird/BUS/BUS.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBUS.cs" />
+    <Compile Include="CustomerBUS.cs" />
     <Compile Include="DetailRoomReservedBUS.cs" />
     <Compile Include="EmployeeBUS.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomBUS.cs" />
+    <Compile Include="TransactionBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
