--- a/Source/HolyBird/DTO/DTO.csproj
+++ b/Source/HolyBird/DTO/DTO.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccountDTO.cs" />
     <Compile Include="BillChildDTO.cs" />
     <Compile Include="CustomerInformationDTO.cs" />
+    <Compile Include="DetailReservedDTO.cs" />
     <Compile Include="DetailRoomReservedDTO.cs" />
     <Compile Include="DetailTransactionDTO.cs" />
     <Compile Include="DamagesDTO.cs" />
