update 2/3 roles of employee

--- a/Source/HolyBird/BUS/BUS.csproj
+++ b/Source/HolyBird/BUS/BUS.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBUS.cs" />
+    <Compile Include="BillChildBUS.cs" />
     <Compile Include="CustomerBUS.cs" />
+    <Compile Include="DamagesBUS.cs" />
     <Compile Include="DetailRoomReservedBUS.cs" />
     <Compile Include="EmployeeBUS.cs" />
     <Compile Include="Global.cs" />
