--- a/Source/HolyBird/BUS/BUS.csproj
+++ b/Source/HolyBird/BUS/BUS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBUS.cs" />
+    <Compile Include="ActivityBUS.cs" />
     <Compile Include="BillChildBUS.cs" />
     <Compile Include="CustomerBUS.cs" />
     <Compile Include="DamagesBUS.cs" />
