--- a/Source/HolyBird/DAO/DAO.csproj
+++ b/Source/HolyBird/DAO/DAO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountDAO.cs" />
+    <Compile Include="ActivityDAO.cs" />
     <Compile Include="BillChildDAO.cs" />
     <Compile Include="CustomerDAO.cs" />
     <Compile Include="DamagesDAO.cs" />
